Fixed UX issue to make sure profile button is always reachable on small screens

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -2165,7 +2165,7 @@ $ui-header-height: 55px;
       display: none;
     }
 
-    @media screen and (width >= 320px) {
+    @media screen and (width >= 400px) {
       .logo--wordmark {
         display: block;
       }
